tests/analyzer/ok/nested-types.api
type pax_font_range = struct {
    start: u32,
    end: u32,
    bitmap: union {
        mono: struct {
            glyphs: [*]const u8,
            width: u8,
            height: u8,
            bpp: u8,
        },
        @"var": struct {
            glyphs: [*]const u8,
            dims: *const u8,
            height: u8,
            bpp: u8,
        },
    },
    hidden: enum { a, b, c },
};