tests/analyzer/fail/struct-invalid-field-type.api
// expected: 1009

type bad = struct {
  a: u32,
  b: *const lol,
  c: u32,
};

